# PolyLinkRPC

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build-test.yml  get-coverage.yml  run-tests.yml  run-valgrind.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  bind_declarations.h  module.cpp
bindings/python/src/: bytes_buffer.cpp
dev_scripts/linux/: build_debug.sh  build_debug_with_python.sh  compute_coverage.sh  run_valgrind.sh
dev_scripts/unix/: compute_coverage.sh
include/PolyLinkRPC/: async_task_receiver.h  async_task_sender.h  bytes.h  communication.h  datagram.h  datagram_serializable.h  datastream.h  datastream.hpp  endian_utils.h  local_communication.h  result.h  rpc_serializer.h  task.h  task_dispatcher.h  task_receiver.h  task_responder.h  task_sender.h  value.h  versions.h
src/: CMakeLists.txt  async_task_receiver.cpp  async_task_sender.cpp  datagram.cpp  datagram_serializable.cpp  endian_utils.cpp  local_communication.cpp  main.cpp  result.cpp  task.cpp  task_dispatcher.cpp  task_receiver.cpp  task_responder.cpp  task_sender.cpp  value.cpp  versions.cpp
tests/: CMakeLists.txt  main_test.cpp  test_bytes.cpp  test_datagram.cpp  test_datastream.cpp  test_endian_utils.cpp  test_local_communication.cpp  test_result.cpp  test_task.cpp  test_task_dispatcher_responder.cpp  test_task_receiver.cpp  test_task_sender.cpp  test_value.cpp  test_versions.cpp
